MAINTAINERCLEANFILES = Makefile.in
filesdir = $(datadir)/enlightenment/data/backgrounds
files_DATA = \
Darkconcrete.edj \
Dark_Gradient.edj \
Japanesemaple.edj \
Lakegrass.edj \
Light_Gradient.edj \
Mossstring.edj \
Motleyrock.edj \
Newgrowth.edj \
Pattern_Radial.edj \
Pattern_Vertical.edj \
Pattern_Vertical_Hi.edj \
Skywall.edj \
Stringflower.edj \
Wetgrass.edj \
Wetleaf.edj \
Whiterock.edj

EXTRA_DIST = $(files_DATA)
