MAINTAINERCLEANFILES = Makefile.in
filesdir = $(datadir)/enlightenment/data/backgrounds
files_DATA = \
Brown_Rock_Hi.edj \
Colorful_Roses.edj \
Darkconcrete.edj \
Dark_Gradient.edj \
Grassy.edj \
Japanesemaple.edj \
Lakegrass.edj \
Light_Gradient.edj \
Mossstring.edj \
Motleyrock.edj \
Newgrowth.edj \
Orange_Roses.edj \
Pattern_Radial.edj \
Pattern_Vertical.edj \
Pattern_Vertical_Hi.edj \
Pine_Silhouettes.edj \
Purple_Flower_Bunch.edj \
Skywall.edj \
Stringflower.edj \
Wetgrass.edj \
Wetleaf.edj \
Whiterock.edj \
Hills.edj \
Light.edj \
Temple.edj \
Train.edj

EXTRA_DIST = $(files_DATA)
