MAINTAINERCLEANFILES = Makefile.in
filesdir = $(datadir)/enlightenment/data/flags
files_DATA = \
ad_flag.png \
af_flag.png \
al_flag.png \
am_flag.png \
ara_flag.png \
ar_flag.png \
at_flag.png \
az_flag.png \
ba_flag.png \
bd_flag.png \
be_flag.png \
bg_flag.png \
brai_flag.png \
br_flag.png \
bt_flag.png \
bw_flag.png \
by_flag.png \
ca_flag.png \
cat_flag.png \
cd_flag.png \
ch_flag.png \
cm_flag.png \
cn_flag.png \
cz_flag.png \
de_flag.png \
dk_flag.png \
ee_flag.png \
epo_flag.png \
es_flag.png \
et_flag.png \
fi_flag.png \
fo_flag.png \
fr_flag.png \
gb_flag.png \
ge_flag.png \
gh_flag.png \
gn_flag.png \
gr_flag.png \
hr_flag.png \
hu_flag.png \
ie_flag.png \
il_flag.png \
in_flag.png \
iq_flag.png \
ir_flag.png \
is_flag.png \
it_flag.png \
jp_flag.png \
ke_flag.png \
kg_flag.png \
kh_flag.png \
kr_flag.png \
ku_flag.png \
kz_flag.png \
la_flag.png \
lang-system.png \
latam_flag.png \
lk_flag.png \
lt_flag.png \
lv_flag.png \
ma_flag.png \
mao_flag.png \
me_flag.png \
mk_flag.png \
ml_flag.png \
mm_flag.png \
mn_flag.png \
mt_flag.png \
mv_flag.png \
my_flag.png \
ng_flag.png \
nl_flag.png \
no_flag.png \
np_flag.png \
ph_flag.png \
pk_flag.png \
pl_flag.png \
pt_flag.png \
ro_flag.png \
rs_flag.png \
ru_flag.png \
se_flag.png \
si_flag.png \
sk_flag.png \
sn_flag.png \
sy_flag.png \
th_flag.png \
tj_flag.png \
tm_flag.png \
tr_flag.png \
tw_flag.png \
tz_flag.png \
ua_flag.png \
unknown_flag.png \
us_flag.png \
uz_flag.png \
vn_flag.png \
za_flag.png

EXTRA_DIST = $(files_DATA)
