MAINTAINERCLEANFILES = Makefile.in
filesdir = $(datadir)/enlightenment/data/fonts
files_DATA = \
Vera.COPYING \
Vera.ttf \
VeraBI.ttf \
VeraBd.ttf \
VeraIt.ttf \
VeraMoBI.ttf \
VeraMoBd.ttf \
VeraMoIt.ttf \
VeraMono.ttf \
VeraSe.ttf \
VeraSeBd.ttf \
baekmuk.COPYING \
dotum.ttf \
fonts.alias \
fonts.dir \
kochi-gothic.ttf \
kochi.COPYING \
fireflysung.ttf \
fireflysung.COPYING

EXTRA_DIST = $(files_DATA)
