MAINTAINERCLEANFILES = Makefile.in
filesdir = $(datadir)/enlightenment/data/fonts
files_DATA = \
Vera.COPYING \
Vera.ttf \
VeraBI.ttf \
VeraBd.ttf \
VeraIt.ttf \
VeraMoBI.ttf \
VeraMoBd.ttf \
VeraMoIt.ttf \
VeraMono.ttf \
VeraSe.ttf \
VeraSeBd.ttf \
fonts.alias \
fonts.dir

EXTRA_DIST = $(files_DATA)
