MAINTAINERCLEANFILES = Makefile.in
filesdir = $(datadir)/enlightenment/data/images
files_DATA = \
enlightenment.png \
test.png \
test.jpg \
test.edj \
lang-bg_BG.png \
lang-ca_ES.png \
lang-cs_CZ.png \
lang-da_DK.png \
lang-de_DE.png \
lang-el_GR.png \
lang-en_US.png \
lang-es_AR.png \
lang-es_ES.png \
lang-fi_FI.png \
lang-fr_FR.png \
lang-hu_HU.png \
lang-it_IT.png \
lang-ja_JP.png \
lang-ko_KR.png \
lang-nb_NO.png \
lang-nl_NL.png \
lang-pl_PL.png \
lang-pt_BR.png \
lang-ru_RU.png \
lang-sk_SK.png \
lang-sl_SI.png \
lang-sv_SE.png \
lang-zh_CN.png \
lang-zh_TW.png

EXTRA_DIST = $(files_DATA)
